	* arch/arm/src/stm32/stm32f2xx_dma.c and stm32f4xx_dma.c: Backed out the
	  DMA priority change just above.  The reduced SD card frequency was
	  necessary and sufficient to resolve the problem.
	* drivers/serial/serial.c:  open, read, write, and poll methods may now
	  abort return EINTR (or a short transfer size) if a signal is received
	  while waiting to receive or send serial data.  This behavior is required
	  by POSIX.
	* include/sys/types.h:  Define NULL to be (0) if __cplusplus is defined.
	  (contributed by Mike Smith)
	* include/ctype.h: Remove a stray semi-colon in a definitions (Thanks
	  Mike Smith).
	* configs/.../Make.defs.  Fix C++ include path set-up in Make.defs file
	  for all 8-bit AVR platforms (Thanks Richard Cochran).
	* lib/stdio/lib_*stream.c:  Revised to handle new error return values from
	  serial.c.
	* arch/arm/src/stm32/stm32_spi.c:  SPI driver can now service re-
	  initialization (Mike Smith).
	* tools/mkconfig.c:  If CONFIG_DRAM_END is not specified, this tool
	  will provide default definition of (CONFIG_DRAM_START + CONFIG_DRAM_SIZE)
	* arch/arm/src/stm32/stm32_otgfshost.c:  Renamed from stm32_usbhost.c.
	  This is nearly code complete and, with any luck, will be available
	  in NuttX-6.21.
	* configs/*/defconfig:  Update all defconfig files to remove syntax
	  that is incompatible with the mconf configuration tool.
	* arch/arm/src/stm32/stm32_otgfshost.c:  This driver now appears to be
	  functional (although more testing is necesary).

6.22 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* include/semaphore.h, sched/sem_holders.c, and lib/semaphore/sem_init.c:
	  Fix some strange (and probably wrong) list handling when
	  CONFIG_PRIORITY_INHERITANCE and CONFIG_SEM_PREALLOCHOLDERS are defined.
	  This list handling was probably causing errors reported by Mike Smith
	* sched/sched_waitpid.c: Fix a possible issue with logic logic that
	  should be brought into a critical section (suggested by Mike Smith)